# OpenGL_Playground

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp  vcpkg.json
assets/models/2b/: 2b.mtl
assets/models/drone/source/: Dron.fbx
assets/models/pod/source/: pod.fbx
shaders/: base.frag  base.vert  blur.frag  explode.frag  explode.geom  explode.vert  grayscale.frag  particle_shader.frag  particle_shader.vert  sharp.frag
src/: Camera.cpp  Camera.h  Framebuffer.cpp  Framebuffer.h  GlobalDefines.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ParticleInstancer.cpp  ParticleInstancer.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  StorageBufferDynamicArray.cpp  StorageBufferDynamicArray.h  Window.cpp  Window.h  main.cpp
src/Entities/: Particle.cpp  Particle.h
src/Input/: Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
src/Lights/: Directional.cpp  Directional.h  Light.cpp  Light.h  LightCollection.cpp  LightCollection.h  PointLight.h
src/Resources/: Material.cpp  Material.h  Primitive.cpp  Primitive.h  ResourceManager.cpp  ResourceManager.h  Texture.cpp  Texture.h
